fixed frontend issues2